Started with book

--- a/book.toml
+++ b/book.toml
@@ -3,4 +3,4 @@ authors = ["Markus Moenig"]
 language = "en"
 multilingual = false
 src = "src"
-title = "Eldiron Documentation"
+title = "Eldiron Book"
