--- a/book.toml
+++ b/book.toml
@@ -3,4 +3,5 @@ authors = ["Markus Moenig"]
 language = "en"
 multilingual = false
 src = "src"
-title = "Eldiron Book"
+title = "Eldiron Book (WiP)"
+default-theme = "Coal"
