--- a/book.toml
+++ b/book.toml
@@ -4,4 +4,15 @@ language = "en"
 multilingual = false
 src = "src"
 title = "Eldiron Book (WiP)"
+
+[preprocessor]
+
+[preprocessor.admonish]
+command = "mdbook-admonish"
+assets_version = "2.0.0" # do not edit: managed by `mdbook-admonish install`
+
+[output]
+
+[output.html]
+additional-css = ["./mdbook-admonish.css"]
 #default-theme = "Coal"
